resouces/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: kcb
  name: kcb
spec:
  port:
    targetPort: proxy
  to:
    kind: Service
    name: kcb
    weight: 100
  tls:
    termination: Reencrypt
